# linkmind

./: .gitignore  CHANGELOG.md  README.md
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/config/: settings.py
backend/src/database/: init_indexes.py  neo4j_connection.py
backend/src/middleware/: exception_handler.py
backend/src/models/: graph.py  link.py  note.py
backend/src/repositories/: cluster_repository.py  expand_repository.py  graph_repository.py  link_repository.py  note_repository.py  search_repository.py
backend/src/routes/: cluster.py  expand.py  graph.py  health.py  link.py  markdown_import.py  note.py  search.py
backend/src/services/: cluster_service.py  expand_service.py  link_service.py  markdown_import_service.py  note_service.py  search_service.py
backend/src/utils/: response.py
deploy/: docker-compose.yml
docs/: 01_项目概览.md  02_部署手册.md  03_API接口文档.md  04_前端功能PRD.md  05_运维手册.md  06_用户手册.md  07_测试指南.md  08_安全策略.md  09_前端开发联调指南.md  10_项目技术栈说明.md  11_产品开发技术指南.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  App.vue  main.js
frontend/src/components/: Breadcrumbs.tsx  CustomNode.tsx  GraphCanvas.tsx  ListItemModal.tsx  NodeDrawer.tsx  NodeModal.tsx  NodePopover.tsx  NoteList.tsx  SearchPanel.vue  Toolbar.tsx  Toolbar.vue
frontend/src/data/: mock.ts
frontend/src/services/: api.js
frontend/src/store/: index.ts
frontend/src/stores/: graph.js  note.js  timeline.js
scripts/: start-dev.sh  start-prod.sh  start-test.sh  start_backend.sh
(+8 files in other folders)
