[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkmind-backend"
version = "0.1.0"
description = "LinkMind Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "python-multipart==0.0.12",
    "neo4j==5.26.0",
    "python-dotenv==1.0.1",
    "aiofiles==23.2.1",
    "pydantic-settings==2.5.0",
    "networkx==3.4.2",
    "python-louvain==0.16",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"